--- a/frontend/app/styles/footer.scss
+++ b/frontend/app/styles/footer.scss
@@ -9,14 +9,27 @@
   width: 100vw !important;
 }
 
-.footer form {
-  padding-right: 50px;
+
+@media screen and (max-width: 991px) {
+  .w-140 {
+    width: 140px !important;
+  }
+
+  .full-height {
+    height: 100%;
+  }
 }
 
-.p-10 {
-  padding-left: 18px !important;
-}
+@media screen and (min-width: 992px) {
+  .footer form {
+    padding-right: 50px;
+  }
 
-pr-12 {
-  padding-right: 12px;
+  .p-10 {
+    padding-left: 18px !important;
+  }
+
+  pr-12 {
+    padding-right: 12px;
+  }
 }
