--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -3,29 +3,6 @@
   z-index: 998;
 }
 
-.navbar-icon {
-  padding-right: 1px;
-  padding-bottom: 2px;
-  width: 19px;
-  display: inline;
-}
-
-nav a.nav-link {
-  color: white !important;
-}
-
-.dropdown-toggle-hided::after {
-  display: none;
-}
-
-.ml-238 {
-  margin-left: 238px !important;
-}
-
-.vertical-center-icon {
-  margin-bottom: 4px !important;
-}
-
 .dropdown .btn-group > a {
   color: #000000;
   background-color: #c7d9e9;
@@ -53,9 +30,7 @@ nav a.nav-link {
   background-color: #f8f9fa;
 }
 
-#search {
-  width: 70%;
-  margin-left: 10px !important;
+.search {
   border-radius: 8px;
   border: none;
   background-color: #c7d9e9;
@@ -66,11 +41,145 @@ nav a.nav-link {
   color: #000000;
 }
 
-.search-wrapper {
-  width: 37vw;
+@media (min-width: 470px) and (max-width: 990px) {
+  .navbar-collapse {
+    padding: 0 10% 0 10% !important;
+  }
 }
 
-.nav-container {
-  width: 66.6%;
-  margin: 0 auto;
+@media screen and (max-width: 991px) {
+  .nav-container {
+    width: 100%;
+  }
+
+  .align-right-on-smartphone {
+    margin: 0 0 0 auto;
+  }
+
+  .break-on-smartphone {
+    min-width: 60%;
+    display: inline-block;
+    word-break: break-word;
+  }
+
+  .content {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .navbar-header {
+    display: flex !important;
+  }
+
+  .show-on-hamburgermenu {
+    justify-content: space-between !important;
+  }
+
+  .show-not-on-hamburgermenu {
+    display: none !important;
+  }
+
+  .ml-270px {
+    margin-left: 0 !important;
+  }
+
+  .search {
+    margin-top: 20px;
+    margin-bottom: 12px;
+    width: 100% !important;
+  }
+
+  .search-wrapper{
+    width: 100%;
+  }
+
+  .dropdown {
+    margin: 0 auto 15px;
+  }
+
+
 }
+
+@media (max-width: 1690px) and (min-width: 992px) {
+  .nav-container {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .content {
+    width: 90% !important;
+  }
+
+  .search {
+    width: 100% !important;
+    margin: 0 !important;
+  }
+
+  .search-wrapper {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1691px) {
+  .nav-container {
+    width: 66.6%;
+    margin: 0 auto;
+  }
+
+  .content {
+    width: 66.6%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .show-on-hamburgermenu {
+    display: none !important;
+  }
+
+  .content {
+    width: 66.6%;
+    margin: 0 auto;
+  }
+
+  .ml-270px {
+    margin-left: 270px !important;
+  }
+
+  .navbar-header {
+    padding-left: 32px !important;
+  }
+
+  .navbar-icon {
+    padding-right: 1px;
+    padding-bottom: 2px;
+    width: 19px;
+    display: inline;
+  }
+
+  nav a.nav-link {
+    color: white !important;
+  }
+
+  .dropdown-toggle-hided::after {
+    display: none;
+  }
+
+  .ml-238 {
+    margin-left: 238px !important;
+  }
+
+  .vertical-center-icon {
+    margin-bottom: 4px !important;
+  }
+
+  .search-wrapper {
+    width: 35vw;
+  }
+
+  .search {
+    width: 70% !important;
+    margin-left: 10px !important;
+  }
+}
+
+
