--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="row pb-3 justify-content-between">
-    <div class="col">
+    <div class="col accountname">
       <h2 class="d-inline">{{t "accounts.show.account"}}: {{@account.accountname}}</h2>
     </div>
   </div>
