--- a/frontend/app/templates/components/account-row.hbs
+++ b/frontend/app/templates/components/account-row.hbs
@@ -5,7 +5,7 @@
     <div class="col-auto pr-0" role="button" {{on "click" this.transitionToAccount}}>
       <img class="img d-inline w-30 float-left icon-big-button" src="/ember/assets/images/key.svg" alt="key">
     </div>
-    <div class="col underline-hover" role="button" {{on "click" this.transitionToAccount}}>
+    <div class="col underline-hover break-words" role="button" {{on "click" this.transitionToAccount}}>
       {{@account.accountname}}
     </div>
     <div class="col-2 pr-0 d-none d-md-block">
