--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -20,7 +20,7 @@
           <div class="side-nav-bar-teams-list scroll-bar">
             {{#if this.navService.availableTeams}}
               {{#each this.navService.sortedTeams as |team|}}
-                <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}} ">
+                <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action team-list-item {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}} ">
                   {{#if team.private}}
                     <img class="icon icon-button mr-2" src="/ember/assets/images/encrypted_small-blue.svg" alt="">
                   {{else}}
