--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -7,13 +7,13 @@
       <BsForm @model={{this.changeset}} as |form|>
         <div class="row">
           {{#if this.hasErrors}}
-            <div class="col-12">
+            <div class="col-12 order-1">
               <div class="alert alert-danger modal-alert">
                 {{t "validations.accountname.duplicate_name"}}
               </div>
             </div>
           {{/if}}
-          <div class="col-md-6">
+          <div class="col-md-6 order-2">
             <form.group class="col-md-12">
               <form.element @property="accountname" @label={{t "helpers.label.account.account_name"}}
                             @name="accountname" class={{if this.changeset.error.accountname.validation
@@ -28,7 +28,7 @@
                       (validation-error-key this.changeset.error.cleartextUsername.validation)}}/>
             </form.group>
           </div>
-          <div class="col-md-6 ml-auto">
+          <div class="col-md-6 ml-auto order-5 order-md-3">
             <div class="form-group col-md-12" id="team-power-select">
               <form.element @label={{t "team"}} @controlType="power-select"
                             @placeholder={{t "accounts.edit.team_placeholder"}}
@@ -54,9 +54,8 @@
               </form.element>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
+
+          <div class="col-md-6 order-3 order-md-4">
             <div class="col-sm-12 secret">
               <form.element @label={{t "password"}} @name="cleartextPassword" id="cleartext-password" class={{if
                       this.changeset.error.cleartextPassword.validation "invalid-input-name"}}
@@ -64,14 +63,16 @@
                       (validation-error-key this.changeset.error.cleartextPassword.validation)}} as |el|>
                 <el.control autocomplete="off"></el.control>
               </form.element>
-              <PasswordStrengthMeter class="col-9 pl-0" @password={{this.changeset.cleartextPassword}}/>
+              <PasswordStrengthMeter class="col-12 col-lg-9 px-0 mb-2 mb-md-0" @password={{this.changeset.cleartextPassword}}/>
             </div>
           </div>
-          <div class="col-md-6 d-flex align-items-center">
-            <button class="btn btn-secondary btn-block col-md-6 mb-4 ml-3" {{on "click" this.setRandomPassword}}
-                    tabindex="4">
-              {{t "accounts.edit.random_password"}}
-            </button>
+          <div class="col-md-6 mb-3 mb-md-0 d-flex align-items-center order-4 order-md-5">
+            <div class="col-md-12">
+              <button class="btn btn-secondary btn-block col-lg-6 mb-md-4 " {{on "click" this.setRandomPassword}}
+                      tabindex="4">
+                {{t "accounts.edit.random_password"}}
+              </button>
+            </div>
           </div>
         </div>
         <div class="row">
