--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -20,7 +20,7 @@
       {{navbar.toggle}}
       <a href="/">
         <img src="/ember/assets/images/cryptopussy_without_text.svg" alt="logo" class="logo-icon">
-        <span class="ml-1 navbar-brand">Cryptopus</span>
+        <span class="d-none d-sm-inline-block ml-1 navbar-brand">Cryptopus</span>
       </a>
       <div>
         <a href="/profile">
