--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -5,7 +5,7 @@
   <FileEntryForm @class="modal_file_entry" @account={{@account}} @title={{t "file_entries.new.title"}} @onAbort={{this.toggleFileEntryNew}}/>
 {{/if}}
 
-<div class="container px-5 pt-4 h-100 bg-white pl-none">
+<div class="container px-5 pt-4 h-100 bg-white pl-none account-container-smartphone">
   <div class="row mb-3">
     <div class="col">
       <a id="account-show-back" role="button" {{on "click" this.transitionBack}}>
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="row pb-3 justify-content-between">
-    <div class="col">
+    <div class="col accountname">
       <h2 class="d-inline">{{t "accounts.show.account"}}: {{@account.accountname}}</h2>
     </div>
   </div>
