--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -9,10 +9,10 @@
     <div class="col-auto my-auto" role="button" {{on "click" this.collapse}}>
       <img class="icon icon-folder py-auto" src="/ember/assets/images/folder.svg" alt="">
     </div>
-    <div class="col pl-0 my-auto" role="button" {{on "click" this.collapse}}>
+    <div class="col pl-0 my-auto break-on-smartphone" role="button" {{on "click" this.collapse}}>
       <h6 class="d-inline">{{@folder.name}}</h6>
     </div>
-    <div class="col-auto justify-content-between align-items-center">
+    <div class="col-auto justify-content-between align-items-center align-right-on-smartphone">
       <a class="margin-for-buttons mx-1" role="button" {{on "click" this.toggleAccountCreating}}>
         <img class="icon-big-button " src="/ember/assets/images/plus.svg" alt="new">
         <BsTooltip @title={{t "tooltips.add_account"}} @delayShow="1000" />
@@ -25,8 +25,6 @@
         <img class="icon-big-button " src="/ember/assets/images/edit.svg" alt="edit folder">
         <BsTooltip @title={{t "folders.tooltips.edit"}} @delayShow="1000" />
       </a>
-    </div>
-    <div class="col-auto ml-0 pl-0 my-auto">
       <span role="button" name="folder-collapse" {{on "click" this.collapse}}>
         {{#if this.collapsed}}
           <img class="icon-big-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
