--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -1,4 +1,4 @@
-<div id="sidebar">
+<div class="sidebar" id="sidebar">
   <nav class="nav-side-bar navbar navbar-dark navbar-inverse p-0">
     <div class="navbar-collapse p-0" id="nav-side-bar-container" {{did-insert this.setupModal this}}>
       <div class="list-group list-group-root">
@@ -15,11 +15,12 @@
           </BsButtonGroup>
         </div>
 
-        {{#if this.navService.availableTeams}}
-          <div class="mb-5 d-flex flex-column">
-            <div class="side-nav-bar-teams-list scroll-bar">
+
+        <div class="mb-5 d-flex flex-column teams-list">
+          <div class="side-nav-bar-teams-list scroll-bar">
+            {{#if this.navService.availableTeams}}
               {{#each this.navService.sortedTeams as |team|}}
-                <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}} ">
+                <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action team-list-item {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}} ">
                   {{#if team.private}}
                     <img class="icon icon-button mr-2" src="/ember/assets/images/encrypted_small-blue.svg" alt="">
                   {{else}}
@@ -44,12 +45,11 @@
                   </BsCollapse>
                 {{/if}}
               {{/each}}
-            </div>
+            {{else}}
+              <div class="list-group-item list-group-item-action bg-blue-one">{{t "teams.none_available"}}</div>
+            {{/if}}
           </div>
-
-        {{else}}
-          <div class="list-group-item list-group-item-action bg-blue-one">{{t "teams.none_available"}}</div>
-        {{/if}}
+        </div>
       </div>
     </div>
   </nav>
