Some responsive fixes

--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -70,6 +70,10 @@
   }
 }
 
+@media (min-width: 576px) and (max-width: 991px) {
+
+}
+
 @media screen and (max-width: 991px) {
   .nav-container {
     width: 100%;
