--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -17,14 +17,16 @@
         <img class="icon-big-button " src="/assets/images/plus.svg" alt="new">
         <BsTooltip @title={{t "tooltips.add_account"}} @delayShow="1000" />
       </a>
-      <DeleteWithConfirmation @class="mx-1" @record={{@folder}} @didDelete={{this.refreshRoute}}>
-        <img class="icon-big-button d-inline my-auto" src="/assets/images/delete.svg" alt="delete folder">
-        <BsTooltip @title={{t "tooltips.delete_folder"}} @delayShow="1000" />
-      </DeleteWithConfirmation>
       <a class="margin-for-buttons mx-1" role="button" {{on "click" this.toggleFolderEdit}}>
         <img class="icon-big-button " src="/assets/images/edit.svg" alt="edit folder">
         <BsTooltip @title={{t "folders.tooltips.edit"}} @delayShow="1000" />
       </a>
+      <DeleteWithConfirmation @class="mx-1" @record={{@folder}} @didDelete={{this.refreshRoute}}>
+        <img class="icon-big-button d-inline my-auto" src="/assets/images/delete.svg" alt="delete folder">
+        <BsTooltip @title={{t "tooltips.delete_folder"}} @delayShow="1000" />
+      </DeleteWithConfirmation>
+    </div>
+    <div class="col-auto pl-0 justify-content-between d-flex align-items-center align-right-on-smartphone">
       <span role="button" name="folder-collapse" {{on "click" this.collapse}}>
         {{#if this.collapsed}}
           <img class="icon-big-button float-right" src="/assets/images/angle-left.svg" alt="<">
