--- a/frontend/app/templates/components/team-show.hbs
+++ b/frontend/app/templates/components/team-show.hbs
@@ -37,10 +37,20 @@
           <img class="icon-big-button" src="/assets/images/team-configure-white.svg" alt="configure">
           <BsTooltip @title={{t "teams.configure.title"}} @delayShow="1000" />
         </span>
+        {{#if @team.deletable }}
+          <DeleteWithConfirmation @class="mx-1" @record={{@team}} @didDelete={{this.transitionToIndex}}>
+            <img class="icon-big-button" src="/assets/images/delete-white.svg" alt="delete">
+            <BsTooltip @title={{t "teams.delete"}} @delayShow="1000"/>
+          </DeleteWithConfirmation>
+        {{/if}}
+      </div>
+      <div class="col-auto pl-0 d-flex justify-content-between align-items-center align-right-on-smartphone">
         <span class="mx-1" role="button" {{on "click" this.toggleFavourised}}>
           <img class="icon-big-button" src="/assets/images/star-white{{if @team.favourised "-filled"}}.svg" alt="star">
           <BsTooltip @title={{if @team.favourised (t "teams.defavorise") (t "teams.favorise")}} @delayShow="1000" />
         </span>
+      </div>
+      <div class="col-auto pl-0 d-flex justify-content-between align-items-center align-right-on-smartphone">
         <span role="button" name="team-collapse" {{on "click" this.collapse}}>
           {{#if this.collapsed}}
             <img class="icon-big-button float-right" src="/assets/images/angle-left-white.svg" alt="<">
@@ -50,7 +60,6 @@
         </span>
       </div>
     </div>
-
     <BsCollapse class="row bg-blue-1 border border-darker border-top-0 rounded-bottom" @collapsed={{this.collapsed}}>
       <div class="col px-4 py-3 list-folder-header">
         {{#if @team.description}}
@@ -60,7 +69,6 @@
             </div>
           </div>
         {{/if}}
-
         {{#if @team.folders}}
           <div class="pt-2">
             {{#each @team.folders as |folder|}}
